# saber-test-task

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
builds/: builds.yaml  tasks.yaml
src/: config.py  main.py
src/tasks/: config.py  router.py  schemas.py  service.py
tests/test_tasks/: conftest.py  test_router.py  test_service.py
