[tool.poetry]
name = "saber-test-task"
version = "0.1.0"
description = ""
authors = ["Morgbork <1>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
pytest = "^7.4.4"
pydantic-settings = "^2.1.0"
aiofiles = "^23.2.1"
uvicorn = "^0.25.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
